--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rivine-ts-types",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Rivine Typescript Types",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -9,11 +9,11 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json",
-    "prepare" : "npm run build",
-    "prepublishOnly" : "npm test && npm run lint",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,9 @@
   "files": [
     "lib/**/*"
   ],
-  "keywords":["hello", "greeter"],
+  "keywords": [
+    "hello",
+    "greeter"
+  ],
   "author": "dylanverstraete"
 }
