--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
   ],
   "author": "dylanverstraete",
   "dependencies": {
-    "decimal.js": "^10.2.0"
+    "@types/lodash": "^4.14.139",
+    "decimal.js": "^10.2.0",
+    "lodash": "^4.17.15"
   }
 }
