update package json script

--- a/package.json
+++ b/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "test": "jest --config jestconfig.json",
     "build": "tsc",
-    "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p .",
     "fix": "tslint -p . --fix",
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "version": "npm run fix && git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
