--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "lib/**/*"
   ],
   "keywords": [
-    "hello",
-    "greeter"
+    "rivine",
+    "typescript"
   ],
   "author": "dylanverstraete",
   "dependencies": {
